feat: initail implementation of POST /items
