# src/controllers/Controller.js
@@ -12,11 +12,16 @@ class Controller {
     * send 200 and the payload as received in this method.
     */
     response.status(payload.code || 200);
-    const responsePayload = payload.payload !== undefined ? payload.payload : payload;
-    if (responsePayload instanceof Object) {
-      response.json(responsePayload);
+    if (payload.code === 201) {
+      response.location(payload.payload.location);
+      response.end();
     } else {
-      response.end(responsePayload);
+      const responsePayload = payload.payload !== undefined ? payload.payload : payload;
+      if (responsePayload instanceof Object) {
+        response.json(responsePayload);
+      } else {
+        response.end(responsePayload);
+      }
     }
   }
 
